2006-03-29  Shawn Betts  <sabetts@vcn.bc.ca>

	* primitives.lisp (*foreground-color*): new defvar
	(*background-color*): likewise
	(*border-color*): likewise

	* input.lisp (draw-input-bucket): use invert-rect

	* core.lisp (reparent-window): use get-bg-color-pixel
	(get-color-pixel): new function
	(get-fg-color-pixel): likewise
	(get-bg-color-pixel): likewise
	(get-border-color-pixel): likewise
	(create-message-window-gcontext): use get-bg-color-pixel and
	get-fg-color-pixel
	(draw-frame-outlines): likewise
	(draw-frame-numbers): likewise
	(show-frame-indicator): likewise
	(create-inverse-gcontext): remove function
	(invert-rect): properly invert the colors
	(update-colors-for-screen): new function
	(update-colors-all-screens): likewise
	(init-screen): use *foreground-color* *background-color* and
	*border-color* for window colors

2006-03-28  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (choose-frame-by-number): call draw-frame-outlines

	* core.lisp (draw-frame-outlines): new function
	(clear-frame-outlines): likewise

	* user.lisp (pull-window-by-number): get the window's frame after
	it's confirmed the window isn't nil.

	* core.lisp (raise-window): new function
	(maybe-hide-window): likewise
	(focus-window): call raise-window and maybe-hide-window
	(frame-raise-window): call maybe-hide-window and raise-window

	* primitives.lisp (dformat): ignore debug output

	* core.lisp (:map-request): don't absorb already managed windows

2006-03-25  Shawn Betts  <sabetts@shitbender.gagrod>

	* stumpwm.lisp (stumpwm): use ' not #' in mapc.

	* primitives.lisp (*window-format-fn*): remove defvar
	(*maxsize-border-width*): new defvar
	(*transient-border-width*): likewise
	(*normal-border-width*): likewise
	(*window-events*): likewise

	* core.lisp (window-border-width): new function
	(setf window-border-width): likewise
	(default-border-width-for-type): likewise
	(unhide-window): likewise
	(hide-window): likewise
	(window-type): likewise